add ordered list

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Wolfe Recipe</title>
 </head>
 <body>
-    
+    <ol>
+        <li>Hello</li>
+        <li>Bye</li>
+    </ol>
+
 </body>
 </html>
