Changed my list

--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Austin's Recipe</title>
 </head>
-<body>
-    
+<body style="background-color: bisque;">
+    <h1>Mexican Rice</h1>
+    <main>
+       <ol>
+       
+        <li>Two cups of comet rice</li>
+
+        <li>Brown the rice using oil on hot pan</li>
+        <li>Obtain 2 halves of onion and bell pepper</li>
+        <li>put 4 cups of water into the pan</li>
+        <li>Time to season: 2 and a half scoops of Caldo de Tomate</li>
+        <li>Get pinch of Ground cumin,pink salt, garlic powder,Pepper</li>
+        <li>Let the rice simmer for 15 min </li>
+       </ol> 
+
+
+    </main>
+    <footer></footer>
 </body>
 </html>
