This is my recipe

--- a/index.html
+++ b/index.html
@@ -5,7 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chance Recipe</title>
 </head>
-<body>
+<body style="background-color: blueviolet;">
+    <h1>Peanut Butter & Jelly</h1>
     
+    <main style="border: 5px solid;margin-right: 460spx;"> 
+    <ul>
+        <h2>Ingredients:</h2>
+        <li>Loaf of Bread</li>
+       <li>Peanut Butter</li>
+       <li>Strawberry Jelly/Grape Jelly</li>
+       <li>Spoon</li>
+        <li>Napkin</li>
+     </ul>   
+    <ol>
+        <h2>Procedure:</h2>
+        <li>Peanut Butter of your choice</li>
+        <li>A Jar of Jelly of Your choice strawberry, grape</li>
+        <li>Grab a loaf of bread, grab three pieces out</li>
+        <li>Grab a spoon and use the back of it</li>
+        <li>To scoop the peanut butter and spread it on the bread </li>
+        <li>Wipe off spoon onto napkin</li>
+        <li>Use spoon to scoop out jelly and spread on bread</li>
+        <li>Put the pieces of bread together</li> 
+    </ol>
+
+    </main>
+    <footer>Trademarked by a kid with a mom that can't cook
+
+    </footer>
 </body>
 </html>
