--- a/index.html
+++ b/index.html
@@ -3,15 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Malevolent Kitchen</title>
 </head>
 <body>
-    <h1>Domain Expansion: Malevolent Kitchen</h1>
+    <h1>Domain Expansion</h1>
+    <h2>Malevolent Kitchen</h2>
     <div>
-        <h2>Indgredients</h2> 
+        <h3>Indgredients</h3> 
+        <ul>
+            <li>1 1/3 cups of water</li>
+            <li>2/3 cup uncooked short grain white rice</li>
+            <li>3 tablespoons of rice vinegar</li>
+            <li>3 tablespoons white sugar</li>
+            <li>1 1/2 teaspoons salt</li>
+            <li>4 sheets of nori seaweed</li>
+            <li>1/2 pound imitation crabmeat, flaked</li>
+            <li>1 avocado - peeled, pitted, sliced</li>
+            <li>1/2 cucumber, peeled, cut into small strips</li>
+            <li>2 tablespoons pickled ginger</li>
 
+        </ul>
+
+        <h3>Directions</h3>
+        <ol>
+            <li>Gather all ingredients. Preheat the oven to 300 degrees F (150 degrees C).</li>
+            <li>Bring water to a boil in a medium pot; stir in rice. Reduce heat to medium-low, cover, and simmer until rice is tender and water has been absorbed, 20 to 25 minutes.</li>
+            <li>Mix rice vinegar, sugar, and salt in a small bowl. Gently stir into cooked rice in the pot and set aside.</li>
+            <li>Lay nori sheets on a baking sheet.</li>
+            <li>Heat nori in the preheated oven until warm, 1 to 2 minutes.</li>
+            <li>Center 1 nori sheet on a bamboo sushi mat. Use wet hands to spread a thin layer of rice on top. Arrange 1/4 of the crabmeat, avocado, cucumber, and pickled ginger over rice in a line down the center.</li>
+            <li>Lift one end of the mat and roll it tightly over filling to make a complete roll. Repeat with remaining ingredients.</li>
+            <li>Use a wet, sharp knife to cut each roll into 4 to 6 slices.</li>
+        </ol>
+
+        <h2>Nutrition Facts</h2>
+        <table>
+            <tr>
+                <th>Calories</th>
+                <th>Fat</th>
+                <th>Carbs</th>
+                <th>Protein</th>
+            </tr>
+
+            <tr>
+                <td>152</td>
+                <td>4g</td>
+                <td>26g</td>
+                <td>4g</td>
+            </tr>
+
+
+        </table>
     </div>
-    
-
 </body>
 </html>
