--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        @font-face {font-family: JujutsuKaisen; src: url(./styles/fonts/JujutsuKaisen.ttf)}
+        h1 {font-family: JujutsuKaisen}
+        h2 {font-family: JujutsuKaisen}
+        h3 {font-family: JujutsuKaisen}
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
     <title>Malevolent Kitchen</title>
 </head>
 <body>
-    <h1>Domain Expansion</h1>
-    <h2>Malevolent Kitchen</h2>
+    <header>
+        <h1>Domain Expansion</h1>
+        <h2>Malevolent Kitchen</h2>
+    </header>
     <div>
-        <h3>Indgredients</h3> 
+        <img class="sushi" src="/styles/images/Sushi.webp">
+        <h3>Indgredients</h3>
         <ul>
             <li>1 1/3 cups of water</li>
             <li>2/3 cup uncooked short grain white rice</li>
@@ -28,16 +37,22 @@
         <h3>Directions</h3>
         <ol>
             <li>Gather all ingredients. Preheat the oven to 300 degrees F (150 degrees C).</li>
+            <img src="/styles/images/sushi_step1.webp">
             <li>Bring water to a boil in a medium pot; stir in rice. Reduce heat to medium-low, cover, and simmer until rice is tender and water has been absorbed, 20 to 25 minutes.</li>
             <li>Mix rice vinegar, sugar, and salt in a small bowl. Gently stir into cooked rice in the pot and set aside.</li>
+            <img src="/styles/images/sushi_step3.webp">
             <li>Lay nori sheets on a baking sheet.</li>
+            <img src="/styles/images/sushi_step4.webp">
             <li>Heat nori in the preheated oven until warm, 1 to 2 minutes.</li>
             <li>Center 1 nori sheet on a bamboo sushi mat. Use wet hands to spread a thin layer of rice on top. Arrange 1/4 of the crabmeat, avocado, cucumber, and pickled ginger over rice in a line down the center.</li>
+            <img src="/styles/images/sushi_step6.webp">
             <li>Lift one end of the mat and roll it tightly over filling to make a complete roll. Repeat with remaining ingredients.</li>
+            <img src="/styles/images/sushi_step7.webp">
             <li>Use a wet, sharp knife to cut each roll into 4 to 6 slices.</li>
+            <img src="/styles/images/sushi_step8.webp">
         </ol>
 
-        <h2>Nutrition Facts</h2>
+        <h3>Nutrition Facts</h3>
         <table>
             <tr>
                 <th>Calories</th>
